// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManifestSelection tests can change artifact input type  without crashing 1`] = `
<div>
  <div
    class="StepWizard--main manifestWizard StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          pipeline.manifestType.manifestRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white"
              style="align-self: center;"
            >
              K8s Manifest
            </p>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          pipeline.manifestType.manifestSource
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main optionsViewContainer"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--margin-bottom-large"
          level="2"
          style="color: black; font-size: 24px;"
        >
          first step
        </h2>
        <div
          class="headerContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <button
            class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main saveBtn StyledProps--intent-primary"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ManifestSelection tests last step data with proper initial values 1`] = `
<div>
  <div
    class="StepWizard--main manifestWizard StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          pipeline.manifestType.manifestRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white"
              style="align-self: center;"
            >
              K8s Manifest
            </p>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          pipeline.manifestType.manifestSource
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Manifest Details
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main optionsViewContainer"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--margin-bottom-large"
          level="2"
          style="color: black; font-size: 24px;"
        >
          Specify Manifest Type
        </h2>
        <div
          class="headerContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card manifestIcon Card--selected"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-kubernetes"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 14"
                    width="26"
                  >
                    <path
                      d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                      fill="#326ce5"
                    />
                    <path
                      d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                      fill="#fff"
                      stroke="#fff"
                      stroke-width="0.25"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
                style="font-size: 12px; text-align: center;"
              >
                K8s Manifest
              </p>
            </div>
            <div
              class="squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card manifestIcon"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="functions"
                >
                  <svg
                    height="26"
                    viewBox="0 0 15 14"
                    width="26"
                  >
                    <path
                      d="M4.64.866H3.214A2.352 2.352 0 00.862 3.217v1.427a2.352 2.352 0 002.352 2.351H4.64a2.352 2.352 0 002.352-2.351V3.217A2.352 2.352 0 004.64.866zm1.255 3.778c0 .691-.563 1.254-1.255 1.254H3.214A1.256 1.256 0 011.96 4.644V3.217c0-.691.562-1.254 1.254-1.254H4.64c.692 0 1.255.563 1.255 1.254v1.427zm5.8-3.778H10.27a2.352 2.352 0 00-2.351 2.351v1.427a2.352 2.352 0 002.351 2.351h1.427a2.352 2.352 0 002.351-2.351V3.217A2.352 2.352 0 0011.696.866zm1.255 3.778c0 .691-.563 1.254-1.254 1.254h-1.427a1.256 1.256 0 01-1.254-1.254V3.217c0-.691.563-1.254 1.254-1.254h1.427c.691 0 1.254.563 1.254 1.254v1.427zM4.64 7.773H3.214a2.352 2.352 0 00-2.352 2.351v1.427a2.352 2.352 0 002.352 2.352H4.64a2.352 2.352 0 002.352-2.352v-1.427A2.352 2.352 0 004.64 7.773zm1.255 3.778c0 .691-.563 1.254-1.255 1.254H3.214a1.256 1.256 0 01-1.254-1.254v-1.427c0-.691.562-1.254 1.254-1.254H4.64c.692 0 1.255.563 1.255 1.254v1.427zm8.294-1.984a.549.549 0 01-.549.549H8.466a.549.549 0 010-1.098h5.174a.55.55 0 01.549.549zm0 3.397a.549.549 0 01-.549.549H8.466a.549.549 0 110-1.098h5.174a.55.55 0 01.549.549z"
                      fill="#25A6F7"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
                style="font-size: 12px; text-align: center;"
              >
                Values YAML
              </p>
            </div>
            <div
              class="squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card manifestIcon"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-helm"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 14"
                    width="26"
                  >
                    <g
                      fill="#277a9e"
                    >
                      <path
                        d="M7.5 1.3c0 .2 0 .4-.1.6 0 .1 0 .2.1.2.7.1 1.4.3 2 .7.1.1.2 0 .2-.1.2-.5.5-.9.9-1.2.2-.1.3-.3.5-.1.2.1.1.4.1.6-.1.5-.4.9-.8 1.2-.2.1-.1.2 0 .3.3.2.5.5.7.8.1.1.1.2-.1.2-.2.1-.3.3-.5.3s-.2-.3-.3-.4c-1.7-2.1-5-2.1-6.7.2-.1.1-.2.2-.3 0-.5-.3-.5-.3-.2-.7.1-.2.3-.3.5-.5.1-.1.1-.2 0-.3-.3-.3-.6-.7-.7-1.2-.1-.1-.2-.4 0-.5s.4 0 .5.1c.5.3.7.7.9 1.1.1.1.1.2.3.1.6-.4 1.2-.6 1.9-.6.2 0 .2-.1.2-.2-.1-.5-.1-1 0-1.4.1-.2.2-.5.4-.5.3 0 .3.3.4.5s.1.5.1.8zM9.7 11.2c-.7.4-1.3.7-2.1.8-.2 0-.2.1-.1.2.1.5.1.9-.1 1.4-.1.2-.2.4-.4.4s-.3-.2-.3-.4c-.2-.4-.2-.9-.1-1.4 0-.2 0-.2-.2-.2-.7-.1-1.4-.3-1.9-.6-.2-.1-.2 0-.2.1-.2.4-.5.8-.8 1-.2.1-.3.3-.5.1-.2-.1-.1-.4-.1-.5.1-.4.4-.8.7-1.2.1-.1.1-.2 0-.3-.2-.2-.4-.4-.5-.6-.3-.1-.2-.1-.1-.2.2-.1.3-.3.5-.3s.3.2.4.4c1.8 1.9 4.8 1.8 6.4-.2.1-.2.2-.2.4-.1.5.3.5.3.1.8-.1.1-.3.2-.3.3s.2.2.3.3c.3.3.5.6.6 1v.3c0 .2-.1.3-.4.2s-.5-.4-.8-.6c-.2-.1-.3-.4-.5-.7zM12 7.4c.2-.7.5-1.3.7-1.9.1-.1.1-.2.3-.2h.7c.1 0 .1 0 .1.1v3.3c0 .1 0 .1-.1.1-.2 0-.5.1-.7 0s0-.4 0-.7V6.8c-.1.2-.2.5-.3.7-.1.3-.2.5-.3.8 0 .1-.1.2-.3.2-.1 0-.2 0-.3-.2l-.6-1.5v1.7c0 .2 0 .2-.2.2s-.5.1-.6-.1c-.1-.1 0-.4 0-.6V5.3c0-.2.1-.2.2-.2.3 0 .6-.1.7 0 .2.1.2.4.3.7 0 .7.2 1.1.4 1.6zM3.3 7.1v1.6c0 .2 0 .2-.2.2h-.6c-.2 0-.2-.1-.2-.2V7.6c0-.1 0-.2-.2-.2h-.8c-.1 0-.2.1-.2.2v1.1c0 .1 0 .2-.2.2H.3c-.1 0-.2 0-.2-.2V5.4c0-.1 0-.2.2-.2h.6c.1 0 .2 0 .2.2v1c0 .2 0 .2.2.2H2c.2 0 .2 0 .2-.2v-1c0-.1 0-.2.2-.2h.5c.2 0 .2 0 .2.2.2.7.2 1.2.2 1.7zM4.1 7.1V5.5c0-.2 0-.2.2-.2h1.9c.1 0 .2 0 .2.2 0 .6 0 .6-.6.6h-.6c-.1 0-.2 0-.2.2 0 .4 0 .4.4.4h.5c.3 0 .3.1.3.3 0 .5 0 .5-.5.5h-.2c-.5 0-.5 0-.5.5 0 .1 0 .2.2.2h1.1c.1 0 .2 0 .2.2 0 .6 0 .6-.6.6H4.4c-.2 0-.3 0-.3-.3V7.1zM7.2 7.1V5.5c0-.2 0-.3.2-.2.2 0 .5-.1.7.1.1.1 0 .4 0 .7V8c0 .2 0 .2.2.2h1c.1 0 .2 0 .2.2 0 .6 0 .6-.6.6H7.4c-.2 0-.2-.1-.2-.2V7.1z"
                      />
                    </g>
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
                style="font-size: 12px; text-align: center;"
              >
                Helm Chart
              </p>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <button
            class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main saveBtn StyledProps--intent-primary"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ManifestSelection tests last step data without initial values 1`] = `
<div>
  <div
    class="StepWizard--main manifestWizard StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          pipeline.manifestType.manifestRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white"
              style="align-self: center;"
            >
              K8s Manifest
            </p>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          pipeline.manifestType.manifestSource
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Manifest Details
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main optionsViewContainer"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--margin-bottom-large"
          level="2"
          style="color: black; font-size: 24px;"
        >
          Specify Manifest Type
        </h2>
        <div
          class="headerContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card manifestIcon Card--selected"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-kubernetes"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 14"
                    width="26"
                  >
                    <path
                      d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                      fill="#326ce5"
                    />
                    <path
                      d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                      fill="#fff"
                      stroke="#fff"
                      stroke-width="0.25"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
                style="font-size: 12px; text-align: center;"
              >
                K8s Manifest
              </p>
            </div>
            <div
              class="squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card manifestIcon"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="functions"
                >
                  <svg
                    height="26"
                    viewBox="0 0 15 14"
                    width="26"
                  >
                    <path
                      d="M4.64.866H3.214A2.352 2.352 0 00.862 3.217v1.427a2.352 2.352 0 002.352 2.351H4.64a2.352 2.352 0 002.352-2.351V3.217A2.352 2.352 0 004.64.866zm1.255 3.778c0 .691-.563 1.254-1.255 1.254H3.214A1.256 1.256 0 011.96 4.644V3.217c0-.691.562-1.254 1.254-1.254H4.64c.692 0 1.255.563 1.255 1.254v1.427zm5.8-3.778H10.27a2.352 2.352 0 00-2.351 2.351v1.427a2.352 2.352 0 002.351 2.351h1.427a2.352 2.352 0 002.351-2.351V3.217A2.352 2.352 0 0011.696.866zm1.255 3.778c0 .691-.563 1.254-1.254 1.254h-1.427a1.256 1.256 0 01-1.254-1.254V3.217c0-.691.563-1.254 1.254-1.254h1.427c.691 0 1.254.563 1.254 1.254v1.427zM4.64 7.773H3.214a2.352 2.352 0 00-2.352 2.351v1.427a2.352 2.352 0 002.352 2.352H4.64a2.352 2.352 0 002.352-2.352v-1.427A2.352 2.352 0 004.64 7.773zm1.255 3.778c0 .691-.563 1.254-1.255 1.254H3.214a1.256 1.256 0 01-1.254-1.254v-1.427c0-.691.562-1.254 1.254-1.254H4.64c.692 0 1.255.563 1.255 1.254v1.427zm8.294-1.984a.549.549 0 01-.549.549H8.466a.549.549 0 010-1.098h5.174a.55.55 0 01.549.549zm0 3.397a.549.549 0 01-.549.549H8.466a.549.549 0 110-1.098h5.174a.55.55 0 01.549.549z"
                      fill="#25A6F7"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
                style="font-size: 12px; text-align: center;"
              >
                Values YAML
              </p>
            </div>
            <div
              class="squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card manifestIcon"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-helm"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 14"
                    width="26"
                  >
                    <g
                      fill="#277a9e"
                    >
                      <path
                        d="M7.5 1.3c0 .2 0 .4-.1.6 0 .1 0 .2.1.2.7.1 1.4.3 2 .7.1.1.2 0 .2-.1.2-.5.5-.9.9-1.2.2-.1.3-.3.5-.1.2.1.1.4.1.6-.1.5-.4.9-.8 1.2-.2.1-.1.2 0 .3.3.2.5.5.7.8.1.1.1.2-.1.2-.2.1-.3.3-.5.3s-.2-.3-.3-.4c-1.7-2.1-5-2.1-6.7.2-.1.1-.2.2-.3 0-.5-.3-.5-.3-.2-.7.1-.2.3-.3.5-.5.1-.1.1-.2 0-.3-.3-.3-.6-.7-.7-1.2-.1-.1-.2-.4 0-.5s.4 0 .5.1c.5.3.7.7.9 1.1.1.1.1.2.3.1.6-.4 1.2-.6 1.9-.6.2 0 .2-.1.2-.2-.1-.5-.1-1 0-1.4.1-.2.2-.5.4-.5.3 0 .3.3.4.5s.1.5.1.8zM9.7 11.2c-.7.4-1.3.7-2.1.8-.2 0-.2.1-.1.2.1.5.1.9-.1 1.4-.1.2-.2.4-.4.4s-.3-.2-.3-.4c-.2-.4-.2-.9-.1-1.4 0-.2 0-.2-.2-.2-.7-.1-1.4-.3-1.9-.6-.2-.1-.2 0-.2.1-.2.4-.5.8-.8 1-.2.1-.3.3-.5.1-.2-.1-.1-.4-.1-.5.1-.4.4-.8.7-1.2.1-.1.1-.2 0-.3-.2-.2-.4-.4-.5-.6-.3-.1-.2-.1-.1-.2.2-.1.3-.3.5-.3s.3.2.4.4c1.8 1.9 4.8 1.8 6.4-.2.1-.2.2-.2.4-.1.5.3.5.3.1.8-.1.1-.3.2-.3.3s.2.2.3.3c.3.3.5.6.6 1v.3c0 .2-.1.3-.4.2s-.5-.4-.8-.6c-.2-.1-.3-.4-.5-.7zM12 7.4c.2-.7.5-1.3.7-1.9.1-.1.1-.2.3-.2h.7c.1 0 .1 0 .1.1v3.3c0 .1 0 .1-.1.1-.2 0-.5.1-.7 0s0-.4 0-.7V6.8c-.1.2-.2.5-.3.7-.1.3-.2.5-.3.8 0 .1-.1.2-.3.2-.1 0-.2 0-.3-.2l-.6-1.5v1.7c0 .2 0 .2-.2.2s-.5.1-.6-.1c-.1-.1 0-.4 0-.6V5.3c0-.2.1-.2.2-.2.3 0 .6-.1.7 0 .2.1.2.4.3.7 0 .7.2 1.1.4 1.6zM3.3 7.1v1.6c0 .2 0 .2-.2.2h-.6c-.2 0-.2-.1-.2-.2V7.6c0-.1 0-.2-.2-.2h-.8c-.1 0-.2.1-.2.2v1.1c0 .1 0 .2-.2.2H.3c-.1 0-.2 0-.2-.2V5.4c0-.1 0-.2.2-.2h.6c.1 0 .2 0 .2.2v1c0 .2 0 .2.2.2H2c.2 0 .2 0 .2-.2v-1c0-.1 0-.2.2-.2h.5c.2 0 .2 0 .2.2.2.7.2 1.2.2 1.7zM4.1 7.1V5.5c0-.2 0-.2.2-.2h1.9c.1 0 .2 0 .2.2 0 .6 0 .6-.6.6h-.6c-.1 0-.2 0-.2.2 0 .4 0 .4.4.4h.5c.3 0 .3.1.3.3 0 .5 0 .5-.5.5h-.2c-.5 0-.5 0-.5.5 0 .1 0 .2.2.2h1.1c.1 0 .2 0 .2.2 0 .6 0 .6-.6.6H4.4c-.2 0-.3 0-.3-.3V7.1zM7.2 7.1V5.5c0-.2 0-.3.2-.2.2 0 .5-.1.7.1.1.1 0 .4 0 .7V8c0 .2 0 .2.2.2h1c.1 0 .2 0 .2.2 0 .6 0 .6-.6.6H7.4c-.2 0-.2-.1-.2-.2V7.1z"
                      />
                    </g>
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
                style="font-size: 12px; text-align: center;"
              >
                Helm Chart
              </p>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <button
            class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main saveBtn StyledProps--intent-primary"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ManifestSelection tests new connector view works correctly 1`] = `
<div>
  <div
    class="StepWizard--main manifestWizard StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          pipeline.manifestType.manifestRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white"
              style="align-self: center;"
            >
              K8s Manifest
            </p>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          pipeline.manifestType.manifestSource
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main manifestStore StyledProps--padding-small"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--margin-bottom-large"
          level="2"
          style="font-size: 24px;"
        >
          Specify Manifest Store
        </h2>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-flex-start"
        >
          <div
            class="squareCardContainer"
          >
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card squareCard Card--selected Card--interactive"
              tabindex="0"
            >
              <span
                class="Card--corner"
              >
                <span
                  class="Card--badge"
                />
                <span
                  class="bp3-icon bp3-icon-tick StyledProps--main StyledProps--color StyledProps--color-white"
                  icon="tick"
                >
                  <svg
                    data-icon="tick"
                    height="9"
                    viewBox="0 0 16 16"
                    width="9"
                  >
                    <desc>
                      tick
                    </desc>
                    <path
                      d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="bp3-icon StyledProps--main"
                data-icon="service-github"
              >
                <svg
                  height="26"
                  viewBox="0 0 14 14"
                  width="26"
                >
                  <path
                    d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
                    fill="#f42534"
                  />
                </svg>
              </span>
            </div>
            <p
              class="StyledProps--font StyledProps--main"
              style="font-size: 12px; text-align: center;"
            >
              pipeline.manifestType.gitConnectorLabel
            </p>
          </div>
          <div
            class="squareCardContainer"
          >
            <div
              class="bp3-card bp3-elevation-0 Card--card disabled squareCard Card--disabled"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="github"
              >
                <svg
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
                  />
                </svg>
              </span>
            </div>
            <p
              class="StyledProps--font StyledProps--main"
              style="font-size: 12px; text-align: center;"
            >
              common.repo_provider.githubLabel
            </p>
          </div>
          <div
            class="squareCardContainer"
          >
            <div
              class="bp3-card bp3-elevation-0 Card--card disabled squareCard Card--disabled"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="service-gotlab"
              >
                <svg
                  height="26"
                  viewBox="0 0 14 13"
                  width="26"
                >
                  <path
                    d="M7 12.9L9.6 5H4.4z"
                    fill="#e24329"
                  />
                  <path
                    d="M7 12.9L4.4 5H.8z"
                    fill="#fc6d26"
                  />
                  <path
                    d="M.8 5L0 7.4c0 .2 0 .5.2.6L7 12.9z"
                    fill="#fca326"
                  />
                  <path
                    d="M.8 5h3.6L2.9.2c-.1-.2-.5-.2-.5 0z"
                    fill="#e24329"
                  />
                  <path
                    d="M7 12.9L9.6 5h3.6z"
                    fill="#fc6d26"
                  />
                  <path
                    d="M13.2 5l.8 2.4c0 .2 0 .5-.2.6L7 12.9z"
                    fill="#fca326"
                  />
                  <path
                    d="M13.2 5H9.6L11.2.2c.1-.2.4-.2.5 0z"
                    fill="#e24329"
                  />
                </svg>
              </span>
            </div>
            <p
              class="StyledProps--font StyledProps--main"
              style="font-size: 12px; text-align: center;"
            >
              common.repo_provider.gitlabLabel
            </p>
          </div>
          <div
            class="squareCardContainer"
          >
            <div
              class="bp3-card bp3-elevation-0 Card--card disabled squareCard Card--disabled"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="bitbucket"
              >
                <svg
                  height="26"
                  width="26"
                >
                  <defs>
                    <lineargradient
                      id="bitbucket_svg__b"
                      x1="108.633%"
                      x2="46.927%"
                      y1="13.408%"
                      y2="79.102%"
                    >
                      <stop
                        offset="18%"
                        stop-color="#0052CC"
                      />
                      <stop
                        offset="100%"
                        stop-color="#2684FF"
                      />
                    </lineargradient>
                    <filter
                      id="bitbucket_svg__a"
                    >
                      <fecolormatrix
                        in="SourceGraphic"
                        values="0 0 0 0 0.157377 0 0 0 0 0.161311 0 0 0 0 0.240000 0 0 0 1.000000 0"
                      />
                    </filter>
                  </defs>
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    filter="url(#bitbucket_svg__a)"
                    transform="translate(2 3)"
                  >
                    <path
                      d="M8.305 12.59h4.383l1.058-6.211H7.14z"
                    />
                    <path
                      d="M.681.008a.671.671 0 00-.518.235.68.68 0 00-.154.55l2.855 17.432c.074.44.45.764.895.768h13.698a.674.674 0 00.673-.568L20.985.797a.68.68 0 00-.154-.55.671.671 0 00-.519-.235L.682.008zm12.024 12.6H8.333l-1.184-6.22h6.615l-1.06 6.22z"
                      fill="#2684FF"
                      fill-rule="nonzero"
                    />
                    <path
                      d="M20.06 6.379h-6.308l-1.059 6.215H8.325L3.166 18.75a.908.908 0 00.588.223h13.691a.673.673 0 00.672-.568L20.06 6.38z"
                      fill="url(#bitbucket_svg__b)"
                      fill-rule="nonzero"
                    />
                  </g>
                </svg>
              </span>
            </div>
            <p
              class="StyledProps--font StyledProps--main"
              style="font-size: 12px; text-align: center;"
            >
              pipeline.manifestType.bitBucketLabel
            </p>
          </div>
        </div>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form>
            <div
              class="formContainerStepOne"
            >
              <div
                class="connectorContainer"
              >
                <div>
                  <p
                    class="StyledProps--font StyledProps--main"
                    style="margin-bottom: 5px;"
                  >
                    select Git connector
                  </p>
                  <div
                    class="bp3-form-group"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                        style="width: 400px;"
                      >
                        <button
                          class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main container"
                          data-testid="cr-field-connectorRef"
                          style="width: 372px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="placeholder"
                            >
                              selectServer
                            </span>
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                        <span
                          class="bp3-popover-wrapper MultiTypeInput--wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="MultiTypeInput--btn MultiTypeInput--FIXED"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="fixed-input"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color StyledProps--main addNewManifest StyledProps--intent-primary"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                    icon="plus"
                  >
                    <svg
                      data-icon="plus"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        plus
                      </desc>
                      <path
                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    New Connector
                  </span>
                </button>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-xxlarge StyledProps--main saveBtn"
            >
              <button
                class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                  icon="chevron-left"
                >
                  <svg
                    data-icon="chevron-left"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-left
                    </desc>
                    <path
                      d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  back
                </span>
              </button>
              <button
                class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  continue
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ManifestSelection tests renders correctly with differnet manifest types 1`] = `
<div>
  <div
    class="StepWizard--main manifestWizard StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          pipeline.manifestType.manifestRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white"
              style="align-self: center;"
            >
              K8s Manifest
            </p>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          pipeline.manifestType.manifestSource
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main optionsViewContainer"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--margin-bottom-large"
          level="2"
          style="color: black; font-size: 24px;"
        >
          first step
        </h2>
        <div
          class="headerContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card manifestIcon Card--selected"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-kubernetes"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 14"
                    width="26"
                  >
                    <path
                      d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                      fill="#326ce5"
                    />
                    <path
                      d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                      fill="#fff"
                      stroke="#fff"
                      stroke-width="0.25"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
                style="font-size: 12px; text-align: center;"
              >
                K8s Manifest
              </p>
            </div>
            <div
              class="squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card manifestIcon"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="functions"
                >
                  <svg
                    height="26"
                    viewBox="0 0 15 14"
                    width="26"
                  >
                    <path
                      d="M4.64.866H3.214A2.352 2.352 0 00.862 3.217v1.427a2.352 2.352 0 002.352 2.351H4.64a2.352 2.352 0 002.352-2.351V3.217A2.352 2.352 0 004.64.866zm1.255 3.778c0 .691-.563 1.254-1.255 1.254H3.214A1.256 1.256 0 011.96 4.644V3.217c0-.691.562-1.254 1.254-1.254H4.64c.692 0 1.255.563 1.255 1.254v1.427zm5.8-3.778H10.27a2.352 2.352 0 00-2.351 2.351v1.427a2.352 2.352 0 002.351 2.351h1.427a2.352 2.352 0 002.351-2.351V3.217A2.352 2.352 0 0011.696.866zm1.255 3.778c0 .691-.563 1.254-1.254 1.254h-1.427a1.256 1.256 0 01-1.254-1.254V3.217c0-.691.563-1.254 1.254-1.254h1.427c.691 0 1.254.563 1.254 1.254v1.427zM4.64 7.773H3.214a2.352 2.352 0 00-2.352 2.351v1.427a2.352 2.352 0 002.352 2.352H4.64a2.352 2.352 0 002.352-2.352v-1.427A2.352 2.352 0 004.64 7.773zm1.255 3.778c0 .691-.563 1.254-1.255 1.254H3.214a1.256 1.256 0 01-1.254-1.254v-1.427c0-.691.562-1.254 1.254-1.254H4.64c.692 0 1.255.563 1.255 1.254v1.427zm8.294-1.984a.549.549 0 01-.549.549H8.466a.549.549 0 010-1.098h5.174a.55.55 0 01.549.549zm0 3.397a.549.549 0 01-.549.549H8.466a.549.549 0 110-1.098h5.174a.55.55 0 01.549.549z"
                      fill="#25A6F7"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
                style="font-size: 12px; text-align: center;"
              >
                Values YAML
              </p>
            </div>
            <div
              class="squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card manifestIcon"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-helm"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 14"
                    width="26"
                  >
                    <g
                      fill="#277a9e"
                    >
                      <path
                        d="M7.5 1.3c0 .2 0 .4-.1.6 0 .1 0 .2.1.2.7.1 1.4.3 2 .7.1.1.2 0 .2-.1.2-.5.5-.9.9-1.2.2-.1.3-.3.5-.1.2.1.1.4.1.6-.1.5-.4.9-.8 1.2-.2.1-.1.2 0 .3.3.2.5.5.7.8.1.1.1.2-.1.2-.2.1-.3.3-.5.3s-.2-.3-.3-.4c-1.7-2.1-5-2.1-6.7.2-.1.1-.2.2-.3 0-.5-.3-.5-.3-.2-.7.1-.2.3-.3.5-.5.1-.1.1-.2 0-.3-.3-.3-.6-.7-.7-1.2-.1-.1-.2-.4 0-.5s.4 0 .5.1c.5.3.7.7.9 1.1.1.1.1.2.3.1.6-.4 1.2-.6 1.9-.6.2 0 .2-.1.2-.2-.1-.5-.1-1 0-1.4.1-.2.2-.5.4-.5.3 0 .3.3.4.5s.1.5.1.8zM9.7 11.2c-.7.4-1.3.7-2.1.8-.2 0-.2.1-.1.2.1.5.1.9-.1 1.4-.1.2-.2.4-.4.4s-.3-.2-.3-.4c-.2-.4-.2-.9-.1-1.4 0-.2 0-.2-.2-.2-.7-.1-1.4-.3-1.9-.6-.2-.1-.2 0-.2.1-.2.4-.5.8-.8 1-.2.1-.3.3-.5.1-.2-.1-.1-.4-.1-.5.1-.4.4-.8.7-1.2.1-.1.1-.2 0-.3-.2-.2-.4-.4-.5-.6-.3-.1-.2-.1-.1-.2.2-.1.3-.3.5-.3s.3.2.4.4c1.8 1.9 4.8 1.8 6.4-.2.1-.2.2-.2.4-.1.5.3.5.3.1.8-.1.1-.3.2-.3.3s.2.2.3.3c.3.3.5.6.6 1v.3c0 .2-.1.3-.4.2s-.5-.4-.8-.6c-.2-.1-.3-.4-.5-.7zM12 7.4c.2-.7.5-1.3.7-1.9.1-.1.1-.2.3-.2h.7c.1 0 .1 0 .1.1v3.3c0 .1 0 .1-.1.1-.2 0-.5.1-.7 0s0-.4 0-.7V6.8c-.1.2-.2.5-.3.7-.1.3-.2.5-.3.8 0 .1-.1.2-.3.2-.1 0-.2 0-.3-.2l-.6-1.5v1.7c0 .2 0 .2-.2.2s-.5.1-.6-.1c-.1-.1 0-.4 0-.6V5.3c0-.2.1-.2.2-.2.3 0 .6-.1.7 0 .2.1.2.4.3.7 0 .7.2 1.1.4 1.6zM3.3 7.1v1.6c0 .2 0 .2-.2.2h-.6c-.2 0-.2-.1-.2-.2V7.6c0-.1 0-.2-.2-.2h-.8c-.1 0-.2.1-.2.2v1.1c0 .1 0 .2-.2.2H.3c-.1 0-.2 0-.2-.2V5.4c0-.1 0-.2.2-.2h.6c.1 0 .2 0 .2.2v1c0 .2 0 .2.2.2H2c.2 0 .2 0 .2-.2v-1c0-.1 0-.2.2-.2h.5c.2 0 .2 0 .2.2.2.7.2 1.2.2 1.7zM4.1 7.1V5.5c0-.2 0-.2.2-.2h1.9c.1 0 .2 0 .2.2 0 .6 0 .6-.6.6h-.6c-.1 0-.2 0-.2.2 0 .4 0 .4.4.4h.5c.3 0 .3.1.3.3 0 .5 0 .5-.5.5h-.2c-.5 0-.5 0-.5.5 0 .1 0 .2.2.2h1.1c.1 0 .2 0 .2.2 0 .6 0 .6-.6.6H4.4c-.2 0-.3 0-.3-.3V7.1zM7.2 7.1V5.5c0-.2 0-.3.2-.2.2 0 .5-.1.7.1.1.1 0 .4 0 .7V8c0 .2 0 .2.2.2h1c.1 0 .2 0 .2.2 0 .6 0 .6-.6.6H7.4c-.2 0-.2-.1-.2-.2V7.1z"
                      />
                    </g>
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
                style="font-size: 12px; text-align: center;"
              >
                Helm Chart
              </p>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <button
            class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main saveBtn StyledProps--intent-primary"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ManifestSelection tests renders without crashing 1`] = `
<div>
  <div
    class="StepWizard--main manifestWizard StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          pipeline.manifestType.manifestRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white"
              style="align-self: center;"
            >
              K8s Manifest
            </p>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          pipeline.manifestType.manifestSource
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main optionsViewContainer"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--margin-bottom-large"
          level="2"
          style="color: black; font-size: 24px;"
        >
          first step
        </h2>
        <div
          class="headerContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <button
            class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main saveBtn StyledProps--intent-primary"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
